force-app/main/default/objects/Course__c/Course__c.object-meta.xml
<CustomObject>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>Course</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>