force-app/main/default/objects/Course__c/fields/AccountFormula__c.field-meta.xml
<CustomField>
    <fullName>AccountFormula__c</fullName>
    <formula>Instructor__r.ProviderSchool__r.CEId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Formula</label>
    <type>Text</type>
</CustomField>