force-app/main/default/objects/Course__c/fields/Biennium1__c.field-meta.xml
<CustomField>
    <fullName>Biennium1__c</fullName>
    <label>Biennium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>