force-app/main/default/objects/Course__c/fields/Biennium__c.field-meta.xml
<CustomField>
    <fullName>Biennium__c</fullName>
    <description>PacPoint-KN09012020-Created for PVL CE and INS Portal</description>
    <formula>TEXT(  Provider_School_Subject__r.Biennium__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biennium</label>
    <type>Text</type>
</CustomField>