force-app/main/default/objects/Course__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>