force-app/main/default/objects/Course__c/fields/CEPLType__c.field-meta.xml
<CustomField>
    <fullName>CEPLType__c</fullName>
    <formula>TEXT(Account__r.CEPLType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE/PL Type</label>
    <type>Text</type>
</CustomField>