force-app/main/default/objects/Course__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>