force-app/main/default/objects/Course__c/fields/CourseCompletedReminderSent__c.field-meta.xml
<CustomField>
    <fullName>CourseCompletedReminderSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Completed Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>