force-app/main/default/objects/Course__c/fields/CourseId__c.field-meta.xml
<CustomField>
    <fullName>CourseId__c</fullName>
    <formula>IF(
NOT(ISBLANK(ExternalId__c)), 
ExternalId__c, 
IF(TEXT(Subject__r.Area__c) == &apos;Continuing Education&apos;, &apos;C&apos; + RIGHT(Name, 5), IF (TEXT(Subject__r.Area__c) == &apos;Prelicense&apos;, &apos;P&apos; + RIGHT(Name, 5), &apos;&apos;)))</formula>
    <label>CourseId</label>
    <type>Text</type>
</CustomField>