force-app/main/default/objects/Course__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <description>PacPoint-KN08122020-Created for PVL CE and INS</description>
    <formula>Subject__r.CreditsForCESubjects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>