force-app/main/default/objects/Course__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>