force-app/main/default/objects/Course__c/fields/InstructorName__c.field-meta.xml
<CustomField>
    <fullName>InstructorName__c</fullName>
    <formula>Instructor__r.InstructorName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor Name</label>
    <type>Text</type>
</CustomField>