force-app/main/default/objects/Course__c/fields/Island__c.field-meta.xml
<CustomField>
    <fullName>Island__c</fullName>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>Island</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oahu</fullName>
            </value>
            <value>
                <fullName>Molokai</fullName>
            </value>
            <value>
                <fullName>Lanai</fullName>
            </value>
            <value>
                <fullName>Kauai</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Maui</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>