force-app/main/default/objects/Course__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <description>PacPoint-KN08122020-Created for PVL CE and INS</description>
    <formula>TEXT(Subject__r.Medium__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medium</label>
    <type>Text</type>
</CustomField>