force-app/main/default/objects/Course__c/fields/Provider_School_Subject__c.field-meta.xml
<CustomField>
    <fullName>Provider_School_Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider / School Subject</label>
    <referenceTo>ProviderSchoolSubjects__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>