force-app/main/default/objects/Course__c/fields/PVLPortalUser__c.field-meta.xml
<CustomField>
    <fullName>PVLPortalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT-082002 - Created for PVL CE and INS Portal</description>
    <label>PVL Portal User</label>
    <referenceTo>PVL_Portal_User__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>