force-app/main/default/objects/Course__c/fields/Space_Available__c.field-meta.xml
<CustomField>
    <fullName>Space_Available__c</fullName>
    <description>This calculates the spaces available in a given course</description>
    <formula>IF(TEXT(Subject__r.Medium__c) = &quot;Classroom&quot;, Capacity__c - Total_Course_Enrolments__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Space Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>