force-app/main/default/objects/Course__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>