force-app/main/default/objects/Course__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>