force-app/main/default/objects/Course__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>USStates</valueSetName>
    </valueSet>
</CustomField>