force-app/main/default/objects/Course__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>