force-app/main/default/objects/Course__c/fields/SubjectDescription__c.field-meta.xml
<CustomField>
    <fullName>SubjectDescription__c</fullName>
    <formula>Provider_School_Subject__r.Subject__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Description</label>
    <type>Text</type>
</CustomField>