force-app/main/default/objects/Course__c/fields/Total_Course_Enrolments__c.field-meta.xml
<CustomField>
    <fullName>Total_Course_Enrolments__c</fullName>
    <label>Total Course Enrollments</label>
    <summaryForeignKey>PrelicenseCEEnrollment__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>