force-app/main/default/objects/Course__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <description>PacPoint-KN08112020-Created for PVL CE and INS Portal</description>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>