force-app/main/default/objects/Course__c/listViews/All_Courses.listView-meta.xml
<ListView>
    <fullName>All_Courses</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CourseId__c</columns>
    <columns>Instructor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ExternalId__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Courses</label>
</ListView>